@@ -22,6 +22,7 @@
  */
 define("PSYCHOSTATS_PAGE", true);
 define("PSYCHOSTATS_ADMIN_PAGE", true);
+$basename = basename(__FILE__, '.php');
 include("../includes/common.php");
 include("./common.php");
 $cms->theme->assign('page', 'owners');
@@ -47,12 +48,12 @@ if (is_numeric($team_id)) {
 
 	if (!$team['team_id']) {
 		$data = array('message' => $cms->trans("Invalid Team # Specified"));
-		$cms->full_page_err(basename(__FILE__, '.php'), $data);
+		$cms->full_page_err($basename, $data);
 		exit();		
 	}
 } elseif (!empty($team_id)) {
 	$data = array('message' => $cms->trans("Invalid Team # Specified"));
-	$cms->full_page_err(basename(__FILE__, '.php'), $data);
+	$cms->full_page_err($basename, $data);
 	exit();		
 }
 
@@ -166,7 +167,6 @@ $cms->theme->assign(array(
 ));
 
 // display the output
-$basename = basename(__FILE__, '.php');
 $cms->theme->add_css('css/forms.css');
 $cms->theme->add_js('js/forms.js');
 $cms->full_page($basename, $basename, $basename.'_header', $basename.'_footer', '');
