@@ -22,6 +22,7 @@
  */
 define("PSYCHOSTATS_PAGE", true);
 define("PSYCHOSTATS_ADMIN_PAGE", true);
+$basename = basename(__FILE__, '.php');
 include("../includes/common.php");
 include("./common.php");
 $cms->theme->assign('page', 'seasons');
@@ -42,12 +43,12 @@ if (is_numeric($season_h)) {
 	$season = $ps->db->fetch_row(1, "SELECT * FROM $ps->t_seasons_h WHERE season_h=" . $ps->db->escape($season_h));
 	if (!$season['season_h']) {
 		$data = array('message' => $cms->trans("Invalid Season Specified"));
-		$cms->full_page_err(basename(__FILE__, '.php'), $data);
+		$cms->full_page_err($basename, $data);
 		exit();		
 	}
 } elseif (!empty($season_h)) {
 	$data = array('message' => $cms->trans("Invalid Season Specified"));
-	$cms->full_page_err(basename(__FILE__, '.php'), $data);
+	$cms->full_page_err($basename, $data);
 	exit();		
 }
 
@@ -110,7 +111,6 @@ $cms->theme->assign(array(
 ));
 
 // display the output
-$basename = basename(__FILE__, '.php');
 $cms->theme->add_css('css/forms.css');
 $cms->theme->add_js('js/forms.js');
 $cms->full_page($basename, $basename, $basename.'_header', $basename.'_footer', '');
