@@ -22,6 +22,7 @@
  */
 define("PSYCHOSTATS_PAGE", true);
 define("PSYCHOSTATS_ADMIN_PAGE", true);
+$basename = basename(__FILE__, '.php');
 include("../includes/common.php");
 include("./common.php");
 include_once(PS_ROOTDIR . "/includes/class_themeManager.php");
@@ -218,12 +219,11 @@ $cms->theme->assign(array(
 	'total_themes'	=> $total,
 	'submit'	=> $submit,
 	'confirm'	=> $confirm,
-	'page'		=> basename(__FILE__, '.php'), 
+	'page'		=> $basename, 
 	'child'		=> null, 
 ));
 
 // display the output
-$basename = basename(__FILE__, '.php');
 $cms->theme->add_css('css/forms.css');
 $cms->theme->add_js('js/themes.js');
 $cms->theme->add_js('js/message.js');
