@@ -22,6 +22,7 @@
  */
 define("PSYCHOSTATS_PAGE", true);
 define("PSYCHOSTATS_ADMIN_PAGE", true);
+$basename = basename(__FILE__, '.php');
 include("../includes/common.php");
 include("./common.php");
 
@@ -150,14 +151,13 @@ $cms->crumb('Manage', psss_url_wrapper(array('_base' => 'manage.php' )));
 $cms->crumb('Users', psss_url_wrapper(array('_base' => $php_scnm )));
 // assign variables to the theme
 $cms->theme->assign(array(
-	'page'		=> basename(__FILE__, '.php'), 
+	'page'		=> $basename, 
 	'user'		=> $cms->user->to_form_input(),
 	'users'		=> $users,
 	'pager'		=> $pager,
 ));
 
 // display the output
-$basename = basename(__FILE__, '.php');
 $cms->theme->add_css('css/2column.css');
 $cms->theme->add_css('css/forms.css');
 $cms->theme->add_js('js/users.js');
