@@ -22,9 +22,10 @@
  */
 define("PSYCHOSTATS_PAGE", true);
 define("PSYCHOSTATS_ADMIN_PAGE", true);
+$basename = basename(__FILE__, '.php');
 include("../includes/common.php");
 include("./common.php");
-$cms->theme->assign('page', basename(__FILE__, '.php'));
+$cms->theme->assign('page', $basename);
 
 $input_types = array( 'boolean', 'checkbox', 'select', 'text', 'textarea' );
 
@@ -44,7 +45,7 @@ if (is_numeric($id)) {
 		$data = array(
 			'message' => $cms->trans("Invalid Conf ID Specified"),
 		);
-		$cms->full_page_err(basename(__FILE__, '.php'), $data);
+		$cms->full_page_err($basename, $data);
 		exit();
 	}
 	if (empty($ct)) $ct = $conf['conftype'];
@@ -150,7 +151,6 @@ $cms->theme->assign(array(
 ));
 
 // display the output
-$basename = basename(__FILE__, '.php');
 //$cms->theme->add_css('css/2column.css');
 $cms->theme->add_css('css/forms.css');
 $cms->full_page($basename, $basename, $basename.'_header', $basename.'_footer', '');
